docs/4.20/backup_and_restore/application_backup_and_restore/troubleshooting/pods-crash-or-restart-due-to-lack-of-memory-or-cpu.md
If a Velero or Restic pod crashes due to a lack of memory or CPU, you can set specific resource requests for either of those resources. The values for the resource request fields must follow the same format as Kubernetes resource requirements.

If you do not specify `configuration.velero.podConfig.resourceAllocations` or `configuration.restic.podConfig.resourceAllocations`, see the following default `resources` specification configuration for a Velero or Restic pod:

``` yaml
requests:
  cpu: 500m
  memory: 128Mi
```

<div>

<div class="title">

Additional resources

</div>

- [Velero CPU and memory requirements based on collected data](../../../backup_and_restore/application_backup_and_restore/installing/about-installing-oadp.xml#oadp-velero-cpu-memory-requirements_about-installing-oadp)

</div>

# Setting resource requests for a Velero pod

You can use the `configuration.velero.podConfig.resourceAllocations` specification field in the `oadp_v1alpha1_dpa.yaml` file to set specific resource requests for a `Velero` pod.

<div>

<div class="title">

Procedure

</div>

- Set the `cpu` and `memory` resource requests in the YAML file:

  <div class="formalpara">

  <div class="title">

  Example Velero file

  </div>

  ``` yaml
  apiVersion: oadp.openshift.io/v1alpha1
  kind: DataProtectionApplication
  ...
  configuration:
    velero:
      podConfig:
        resourceAllocations:
          requests:
            cpu: 200m
            memory: 256Mi
  ```

  </div>

  - The `resourceAllocations` listed are for average usage.

</div>

# Setting resource requests for a Restic pod

You can use the `configuration.restic.podConfig.resourceAllocations` specification field to set specific resource requests for a `Restic` pod.

> [!NOTE]
> With OADP 1.5.0, the `configuration.restic.podConfig.resourceAllocations` specification field is removed from Data Protection Application (DPA). Use the `nodeAgent` section with the `uploaderType` field set to `Kopia` instead of `Restic` .

<div>

<div class="title">

Procedure

</div>

- Set the `cpu` and `memory` resource requests in the YAML file:

  <div class="formalpara">

  <div class="title">

  Example Restic file

  </div>

  ``` yaml
  apiVersion: oadp.openshift.io/v1alpha1
  kind: DataProtectionApplication
  ...
  configuration:
    restic:
      podConfig:
        resourceAllocations:
          requests:
            cpu: 1000m
            memory: 16Gi
  ```

  </div>

  - The `resourceAllocations` listed are for average usage.

</div>

# Setting resource requests for a nodeAgent pod

You can use the `configuration.nodeAgent.podConfig.resourceAllocations` specification field to set specific resource requests for a `nodeAgent` pod.

> [!NOTE]
> With OADP 1.5.0, the `configuration.restic.podConfig.resourceAllocations` specification field is removed from Data Protection Application (DPA). Use the `nodeAgent` section with the `uploaderType` field set to `Kopia` instead of `Restic` .

<div>

<div class="title">

Procedure

</div>

1.  Set the `cpu` and `memory` resource requests in the YAML file:

    <div class="formalpara">

    <div class="title">

    Example `nodeAgent.yaml` file

    </div>

    ``` yaml
    apiVersion: oadp.openshift.io/v1alpha1
    kind: DataProtectionApplication
    metadata:
      name: ts-dpa
    spec:
      backupLocations:
      - velero:
          default: true
          objectStorage:
            bucket: oadp.....njph
            prefix: velero
          credential:
            key: cloud
            name: cloud-credentials-gcp
          provider: gcp
      configuration:
        velero:
          defaultPlugins:
          - gcp
          - openshift
          - csi
        nodeAgent:
          enable: true
          uploaderType: kopia
          podConfig:
            resourceAllocations:
              requests:
                cpu: 1000m
                memory: 16Gi
    ```

    </div>

    - The resource allocation examples shown are for average usage.

    - You can modify this parameter depending on your infrastructure and usage.

2.  Create the DPA CR by running the following command:

    ``` terminal
    $ oc create -f nodeAgent.yaml
    ```

</div>

<div>

<div class="title">

Verification

</div>

1.  Verify that the `nodeAgent` pods are running by using the following command:

    ``` terminal
    $ oc get pods
    ```

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    NAME                                                        READY   STATUS      RESTARTS   AGE
    node-agent-hbj9l                                            1/1     Running     0          97s
    node-agent-wmwgz                                            1/1     Running     0          95s
    node-agent-zvc7k                                            1/1     Running     0          98s
    openshift-adp-controller-manager-7f9db86d96-4lhgq           1/1     Running     0          137m
    velero-7b6c7fb8d7-ppc8m                                     1/1     Running     0          4m2s
    ```

    </div>

2.  Check the resource requests by describing one of the `nodeAgent` pod:

    ``` terminal
    $ oc describe pod node-agent-hbj9l | grep -C 5 Requests
    ```

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
          --log-format=text
        State:          Running
          Started:      Mon, 09 Jun 2025 16:22:15 +0530
        Ready:          True
        Restart Count:  0
        Requests:
          cpu:     1
          memory:  1Gi
        Environment:
          NODE_NAME:            (v1:spec.nodeName)
          VELERO_NAMESPACE:    openshift-adp (v1:metadata.namespace)
    ```

    </div>

</div>
